--- a/app/src/main/res/layout-large-port/fragment_edit_profile.xml
+++ b/app/src/main/res/layout-large-port/fragment_edit_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context=".EditProfileFragment">
+    tools:context=".profile.EditProfileFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_picture"
