--- a/app/src/main/res/layout/fragment_item_edit.xml
+++ b/app/src/main/res/layout/fragment_item_edit.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        tools:context=".itemFragments.ItemDetailsFragment">
+        tools:context=".ItemEditFragment">
 
         <ImageView
             android:id="@+id/item_picture"
@@ -26,7 +26,7 @@
             app:layout_constraintVertical_weight="1" />
 
         <ImageButton
-            android:id="@+id/imageButtonChangePic"
+            android:id="@+id/imageButtonChangePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/item_picture"
