--- a/app/src/main/res/layout/fragment_itemlist.xml
+++ b/app/src/main/res/layout/fragment_itemlist.xml
@@ -18,15 +18,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:background="#FFFFFF"
         android:clickable="true"
         android:focusable="true"
-        android:src="@android:drawable/ic_menu_add"
-        app:fabSize="normal"
         android:scaleType="center"
+        android:src="@drawable/baseline_add_black_24dp"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
