--- a/app/src/main/res/menu/item_edit_menu.xml
+++ b/app/src/main/res/menu/item_edit_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/save_action"
         android:orderInCategory="100"
         android:title="@string/save_edit"
         app:showAsAction="never"/>
