--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,10 +7,10 @@
         <item
             android:id="@+id/nav_itemList"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="ItemList" />
+            android:title="My Items" />
         <item
             android:id="@+id/showProfileFragment"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="ShowProfile" />
+            android:title="My Profile" />
     </group>
 </menu>
